2006-11-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectTree._append_internal): Allow
	specify parents which are objects inserted in the tree.

2006-10-29  Johan Dahlin  <johan@gnome.org>

	* kiwi/datatypes.py:
	* kiwi/ui/objectlist.py:
	* examples/list/enumcombo.py:
	* tests/test_datatypes.py:
	Add support an enum data type and tests.
	Add support for displaying an enum as a combo cell renderer in
	the object list and example

2006-10-17  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* kiwi/tasklet.py:
	* tests/test_tasklet.py:
	When arming a WaitForTasklet check if the state is zombie and join 
	immediately. Add tests

2006-10-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/i18n/i18n.py (compile_po_files): Unlink the old POTFILES.in in case
	of an error. Check the result code of the pot generation, it may fail
	if the encoding is inconsistent.

=== 1.9.11 ===
2006-10-09  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: 
	* doc/howto.tex:
	* kiwi/__version__.py: Update

	* kiwi/ui/views.py (SlaveView._check_reserved): Raise
	ValueError instead of AttributeError, fixes #1998
	(Sidnei da Silva)

2006-10-09  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add right-click and emit double-click
	only when a row is selected, fixes #2817

2006-10-05  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/validation/personalinformation.glade: Add an example.
	* kiwi/enums.py:
	* kiwi/ui/comboboxentry.py: Use KiwiEntry instead of ProxyEntry
	* kiwi/ui/entry.py: 
	* kiwi/ui/widgets/entry.py:
	* tests/test_BaseView.py: Fix destruction of windows.
	* tests/test_Entry.py: 
	* tests/test_masks.py:

	Refactor mask handling in KiwiEntry. Now it supports the use of fields. 
	Fixes #2838

2006-10-04  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/component.py:
	* tests/test_component.py: