@@ -2,6 +2,8 @@
 
 	* kiwi/ui/objectlist.py (ObjectTree._append_internal): Allow
 	specify parents which are objects inserted in the tree.
+	(ObjectTree.collapse, ObjectTree.expand): New methods, suggested
+	by the incredible Ali
 
 2006-10-29  Johan Dahlin  <johan@gnome.org>
 
